# slint_app

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: app-window.slint
ui/componont/: sidebar.slint
ui/page/: adapta.slint  main.slint  serial.slint  temp.slint
ui/page/main/: socket.slint
